--- a/resolucion_ejercicios/index.html
+++ b/resolucion_ejercicios/index.html
@@ -4,37 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnologías Web - Edison Luzardo - Inicio</title>
+    <title>Tecnologías Web - Edison Luzardo - Ejercicios HTML</title>
 </head>
-<body style="background-color: black;">
-    
-    <table>
-        <tr>
-            <td colspan="6"><img src="imagenes/logo.png" alt="Tecnologías Web" /></td>
-        </tr>
-        <tr style="background-color: darkgoldenrod; text-align:center;">
-            <td><a href="index.html">Inicio</a></td>
-            <td><a href="backend.html">BackEnd</a></td>
-            <td><a href="frontend.html">FrontEnd</a></td>
-            <td><a href="http.html">Protocolo HTTP</a></td>
-            <td><a href="servidores.html">Servidores Web</a></td>
-            <td><a href="evaluacion.html">Evaluación</a></td>
-        </tr>
-        <tr>
-            <td><img src="imagenes/tecno.png" width="200" alt="Tecnologías Web" /></td>
-            <td colspan="5">
-                <h1 style="color:darkgoldenrod;">Introducción</h1>
-                <p style="color:white;">En los últimos tiempos se está atravesando por cambios sociales, económicos y políticos motivados entre otros aspectos por el desarrollo de las Tecnologías Web y estar preparado para afrontar estos cambios es uno de los principales objetivos de la asignatura.</p>
-                <p style="color:white;">Es conveniente mencionar que el estudio de esta asignatura abre la posibilidad de acceder al mundo de internet especialmente a las tecnologías web emergentes, para que el alumno esté en la capacidad de desarrollar aplicaciones web que generen soluciones a los problemas que atraviesan hoy en día los usuarios en la web. El uso de tecnologías web en nuestro entorno tiene un efecto multiplicador, donde su uso y acceso logra reducir costos, generar eficiencia y mejorar el rendimiento de diversos sectores de negocios.</p>
-                <p style="color:white;">Los contenidos y competencias a desarrollar en esta asignatura han sido seleccionados cuidadosamente con el fin de que su desempeño se vea reflejado en la aplicación de todos los aprendizajes adquiridos.</p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6" style="text-align:center;">
-                <h2 style="color:darkgoldenrod;">Video introducción a Tecnologías Web</h2>
-                <iframe width="400" height="225" src="https://www.youtube.com/embed/nKpsWnQ7zzA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </td>
-        </tr>
-    </table>
+<body>
+    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+    <h2>Tecnologías Web</h2>
+    <h3>Estudiante: Edison Luzardo Delgado</h3>
+    <h4>Resolución de ejercicios HTML</h4>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="erroreshtml.html">Ejercicio 1. Errores en el código</a></li>
+        <li><a href="tabla.html">Ejercicio 2. Crear una tabla</a></li>
+        <li><a href="anclas.html">Ejercicio 3. Ejemplo de anclas</a></li>
+        <li><a href="formulario.html">Ejercicio 4. Crear un formulario</a></li>
+        <li><a href="video.html">Ejercicio 5. Insertar un video</a></li>
+    </ul>
 </body>
 </html>
