--- a/resolucion_ejercicios/erroreshtml.html
+++ b/resolucion_ejercicios/erroreshtml.html
@@ -7,16 +7,30 @@
     <title>Mecánica Automotriz Torres</title>
 </head>
 <body>
+    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+    <h2>Tecnologías Web</h2>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="erroreshtml.html">Ejercicio 1. Errores en el código</a></li>
+            <li><a href="tabla.html">Ejercicio 2. Crear una tabla</a></li>
+            <li><a href="anclas.html">Ejercicio 3. Ejemplo de anclas</a></li>
+            <li><a href="formulario.html">Ejercicio 4. Crear un formulario</a></li>
+            <li><a href="video.html">Ejercicio 5. Insertar un video</a></li>
+        </ul>
+    </nav>
+    <h3>Corrección de Errores</h3>
     <header>
-        <a href="index.html"><img src="img/logo.jpeg" alt="Logo del Sitio Web" width="200"></a>
+        <a href="#"><img src="img/logo.jpeg" alt="Logo del Sitio Web" width="200"></a>
         <h1>Mecánica Automotriz Torres</h1>
         <nav >
             <li>
-                <ul><a href="index.html">Inicio</a></ul>
-                <ul><a href="quienes-somos.html">Quienes Somos</a></ul>
-                <ul>Servicios</ul>
-                <ul>Promociones</ul>
-                <ul>Contactos</ul>
+                <ul><a href="#">Inicio</a></ul>
+                <ul><a href="#">Quienes Somos</a></ul>
+                <ul><a href="#">Servicios</a></ul>
+                <ul><a href="#">Promociones</a></ul>
+                <ul><a href="#">Contactos</a></ul>
             </li>
         </nav>
     </header>
@@ -31,9 +45,9 @@
             <h3>Links de Interés</h3>
             <nav>
                 <ol>
-                    <li>Loja</li>
-                    <li>Grúas</li>
-                    <li>Hoteles</li>
+                    <li><a href="#">Loja</a></li>
+                    <li><a href="#">Grúas</a></li>
+                    <li><a href="#">Hoteles</a></li>
                 </ol>
             </nav>
         </aside>
@@ -45,18 +59,6 @@
                 <img src="img/loja.jpeg" alt="Loja">
         </article>
     </div>
-    <p style="color:red;">Errores encontrados:</p>
-    <ul>
-        <li>Primera etiqueta header cambiada por etiqueta head.</li>
-        <li>Primera etiqueta aside en el cierre no tenía "/".</li>
-        <li>Etiqueta h2 en el título "Inicio" tenía cierre de etiqueta h3</li>
-        <li>Segunda etiqueta aside en el cierre error de escritura (asides).</li>
-        <li>Etiqueta article en el cierre error de escritura (articles).</li>
-        <li>Etiqueta h2 en el título "Mecánica Automotriz" tenía cierre de etiqueta h1</li>
-        <li>Segunda etiqueta p "Lorem ipsum" no tenía el "/"</li>
-        <li>Etiqueta img que apunta a imagen "loja.jpeg" tenía error de escritura (imgs).</li>
-        <li>Etiqueta footer en el cierre no tenía "/".</li>
-    </ul>
 </body>
 <footer>
     @datorres
