--- a/resolucion_ejercicios/index.html
+++ b/resolucion_ejercicios/index.html
@@ -12,13 +12,15 @@
     <h2>Tecnologías Web</h2>
     <h3>Estudiante: Edison Luzardo Delgado</h3>
     <h4>Resolución de ejercicios HTML</h4>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="erroreshtml.html">Ejercicio 1. Errores en el código</a></li>
-        <li><a href="tabla.html">Ejercicio 2. Crear una tabla</a></li>
-        <li><a href="anclas.html">Ejercicio 3. Ejemplo de anclas</a></li>
-        <li><a href="formulario.html">Ejercicio 4. Crear un formulario</a></li>
-        <li><a href="video.html">Ejercicio 5. Insertar un video</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="erroreshtml.html">Ejercicio 1. Errores en el código</a></li>
+            <li><a href="tabla.html">Ejercicio 2. Crear una tabla</a></li>
+            <li><a href="anclas.html">Ejercicio 3. Ejemplo de anclas</a></li>
+            <li><a href="formulario.html">Ejercicio 4. Crear un formulario</a></li>
+            <li><a href="video.html">Ejercicio 5. Insertar un video</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
