--- a/resolucion_ejercicios/anclas.html
+++ b/resolucion_ejercicios/anclas.html
@@ -7,9 +7,11 @@
     <title>Tecnologías Web - Edison Luzardo - Ejemplo de anclas</title>
 </head>
 <body>
-    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
-    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
-    <h2>Ejemplo de anclas</h2>
+    <header>
+        <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+        <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+        <h2>Ejemplo de anclas</h2>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -56,4 +58,7 @@
         </article>
     </section>
 </body>
+<footer>
+    Trabajo elaborado por Edison Luzardo Delgado.
+</footer>
 </html>
