--- a/resolucion_ejercicios/erroreshtml.html
+++ b/resolucion_ejercicios/erroreshtml.html
@@ -7,9 +7,11 @@
     <title>Mecánica Automotriz Torres</title>
 </head>
 <body>
-    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
-    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
-    <h2>Tecnologías Web</h2>
+    <header>
+        <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+        <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+        <h2>Tecnologías Web</h2>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -20,8 +22,8 @@
             <li><a href="video.html">Ejercicio 5. Insertar un video</a></li>
         </ul>
     </nav>
-    <h3>Corrección de Errores</h3>
     <header>
+        <h3>Corrección de Errores</h3>
         <a href="#"><img src="img/logo.jpeg" alt="Logo del Sitio Web" width="200"></a>
         <h1>Mecánica Automotriz Torres</h1>
         <nav >
@@ -61,6 +63,6 @@
     </div>
 </body>
 <footer>
-    @datorres
+    @datorres || Trabajo elaborado por Edison Luzardo Delgado.
 </footer>
 </html>
