--- a/resolucion_ejercicios/formulario.html
+++ b/resolucion_ejercicios/formulario.html
@@ -7,9 +7,11 @@
     <title>Tecnologías Web - Edison Luzardo - Ejercicio Formulario HTML</title>
 </head>
 <body>
-    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
-    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
-    <h2>Tecnologías Web</h2>
+    <header>
+        <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+        <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+        <h2>Tecnologías Web</h2>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -21,7 +23,9 @@
         </ul>
     </nav>
     <section>
-        <h3>Formulario</h3>
+        <header>
+            <h3>Formulario</h3>
+        </header>
         <form action="https://www.utpl.edu.ec/" method="get">
             <p>Título:</p><input type="text">
             <p>Nombre:</p><input type="text" required autofocus>
@@ -36,4 +40,7 @@
         </form>
     </section>
 </body>
+<footer>
+    Trabajo elaborado por Edison Luzardo Delgado.
+</footer>
 </html>
