--- a/resolucion_ejercicios/index.html
+++ b/resolucion_ejercicios/index.html
@@ -7,11 +7,13 @@
     <title>Tecnologías Web - Edison Luzardo - Ejercicios HTML</title>
 </head>
 <body>
-    <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
-    <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
-    <h2>Tecnologías Web</h2>
-    <h3>Estudiante: Edison Luzardo Delgado</h3>
-    <h4>Resolución de ejercicios HTML</h4>
+    <header>
+        <img src="imagenes/logo.png" alt="Logo UTPL" width="200">
+        <h1 style="color:darkblue;">Universidad Técnica Particular de Loja</h1>
+        <h2>Tecnologías Web</h2>
+        <h3>Estudiante: Edison Luzardo Delgado</h3>
+        <h4>Resolución de ejercicios HTML</h4>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
