--- a/resolucion_ejercicios/erroreshtml.html
+++ b/resolucion_ejercicios/erroreshtml.html
@@ -27,13 +27,13 @@
         <a href="#"><img src="img/logo.jpeg" alt="Logo del Sitio Web" width="200"></a>
         <h1>Mecánica Automotriz Torres</h1>
         <nav >
-            <li>
-                <ul><a href="#">Inicio</a></ul>
-                <ul><a href="#">Quienes Somos</a></ul>
-                <ul><a href="#">Servicios</a></ul>
-                <ul><a href="#">Promociones</a></ul>
-                <ul><a href="#">Contactos</a></ul>
-            </li>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Quienes Somos</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Promociones</a></li>
+                <li><a href="#">Contactos</a></li>
+            </ul>
         </nav>
     </header>
     <aside>
@@ -61,8 +61,8 @@
                 <img src="img/loja.jpeg" alt="Loja">
         </article>
     </div>
+    <footer>
+        @datorres || Trabajo elaborado por Edison Luzardo Delgado.
+    </footer>
 </body>
-<footer>
-    @datorres || Trabajo elaborado por Edison Luzardo Delgado.
-</footer>
 </html>
