--- a/resolucion_ejercicios/video.html
+++ b/resolucion_ejercicios/video.html
@@ -26,10 +26,10 @@
         <header>
             <h3>Video de ejemplo</h3>
         </header>
-        <video src="video/videohtml.mp4" type="video/mp4" controls></video>
+        <video src="video/videohtml.mp4" controls></video>
     </section>
+    <footer>
+        Trabajo elaborado por Edison Luzardo Delgado.
+    </footer>
 </body>
-<footer>
-    Trabajo elaborado por Edison Luzardo Delgado.
-</footer>
 </html>
